# metes-eval

./: .env.example  .gitignore  README.md  pyproject.toml
data/: golden_dataset.json
evaluators/: base.py  fact_diff.py  fair_housing.py
judges/: base.py  gemini_judge.py  pricing.py
judges/prompts/: fair_housing_judge.txt  quality_judge.txt
tests/: test_fact_diff.py  test_fair_housing.py
