[project]
name = "metes-eval"
version = "0.1.0"
description = "Standalone evaluation and monitoring harness for metes.app listing generation pipeline."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
judges = [
    "google-genai>=1.0",
    "anthropic>=0.25",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
